ingress-dns-config/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote2
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quote2
    spec:
      containers:
      - name: backend 
        image: docker.io/datawire/quote:0.4.1
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: quote2
  namespace: backend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: quote2
