ingress-dns-config/quote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-quote
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    # # https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      - quote2.mohammedfuta2000.com
      - quote.mohammedfuta2000.com
      - myapp.mohammedfuta2000.com
      secretName: letsencrypt-nginx-quote
  rules:
    - host: quote.mohammedfuta2000.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port:
                  number: 80
    - host: quote2.mohammedfuta2000.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote
                port:
                  number: 80
    - host: myapp.mohammedfuta2000.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  name: https
  ingressClassName: nginx
